[A11y Bug] Make TFM badges asset and compatible different for high contrast. (#9098)

--- a/src/Bootstrap/less/theme/common-supported-frameworks.less
+++ b/src/Bootstrap/less/theme/common-supported-frameworks.less
@@ -91,3 +91,15 @@ p.frameworktableinfo-text {
   .frameworktableinfo-text;
   margin-top: 10px;
 }
+
+@media (-ms-high-contrast: active), (forced-colors: active) {
+  .framework-badge-asset {
+    font-weight: bold;
+    border: 2px solid @badge-dark;
+    padding: 0px 8px;
+  }
+
+  .frameworktableinfo-asset-icon {
+    border: 2px solid @badge-dark;
+  }
+}
